# routeflux-vpn

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  tun2socks_jni.c
android/app/src/main/kotlin/com/routeflux/vpn/: MainActivity.kt  MyVpnService.kt
android/app/src/main/res/drawable/: ic_vpn_notification.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  vpn_channel.dart
lib/models/: proxy_profile.dart
lib/screens/: profile_editor_screen.dart  profile_list_screen.dart
lib/services/: preferences_service.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
